# manotom_generateBlanks

./: CMakeLists.txt  HELP_TEXT.h  main.cpp  start.h  test.h
src/platform/Converter/: Converter.cpp  Converter.h
src/platform/Drawing/: DrawingClass.cpp  DrawingClass.h  DrawingLibrary.cpp  DrawingLibrary.h
src/platform/Manager/: Manager.cpp  Manager.h
src/platform/PathMaker/: PathMaker.cpp  PathMaker.h
src/platform/Reader/: ModelPointsReader.cpp  ModelPointsReader.h  Reader.cpp  Reader.h  ReaderCFM.cpp  ReaderCFM.h  ReaderFactory.cpp  ReaderFactory.h  ReaderNBR.cpp  ReaderNBR.h  ReaderPoint.h  ReaderTBL.cpp  ReaderTBL.h  ReaderZGT.cpp  ReaderZGT.h
src/struct/: cfm.h  location.h  nbr.h  tbl.h  zgt.h
src/struct/settings/: path.h  settings.h
